--- a/src/css/Background.css
+++ b/src/css/Background.css
@@ -1,6 +1,9 @@
 .background{
+    position: absolute;
     height: 100%;
     width: 100%;
+    left: 0;
+    top: 0;
     z-index: 0;
     filter: blur(20px)
 }
