--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,10 +50,13 @@ h6{
     height: 0;
 }
 
-.visualsContainer{
+.visualsRoot{
     width: 100%;
     height: 100%;
-    z-index: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 10;
 }
 
 .barVisualiser{
