--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,10 +1,26 @@
 button{
-    width: fit-content;
-    height: 24px;
-    padding: 2px;
-    margin: 5px;
+    width:          130px;
+    height:         33px;
+    padding:        2px;
+    margin:         5px;
+    border-radius:  18px;
+    font-size:      12px;
+    border:         none;
+    color:          white;
+    background:     #E41A43;
 }
 
 button:disabled{
-    opacity: 50%;
+    background:     #D6D6D6;
 }
+
+button:hover{
+    opacity:        0.8;
+}
+
+button:active{
+    background:     #820E25;
+}
+
+
+
