--- a/src/css/Map.css
+++ b/src/css/Map.css
@@ -1,52 +1,54 @@
-.map{
-    width: 800px;
-    height: 400px;
-    position: absolute;
-    left: 0;
-    top: 450px;
-    z-index: 100;
-}
 
 .mapContainer{
-    height: 100%;
-    width: 100%;
+    height:     100%;
+    width:      100%;
 }
 
-.map p{
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: black;
-    color: white;
-    z-index: 101;
+.mapInfo{
+    position:       absolute;
+    background:     black;
+    color:          white;
+    margin:         0;
+    font-family:    'Roboto Mono', monospace;
+    font-size:      12px;
 }
 
-.mapboxgl-control-container{
-    display: none;
+.mapContainer a{
+    text-decoration:    none;
+    color:              white;
 }
 
-.mapButton{
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 101;
+.mapboxgl-ctrl{
+    position:       absolute;
+    width:          330px;
+    font-size:      10px;
+    transform:      translate(0, -5px);
+    background:     black;
+    text-align:     center;
+
 }
 
-.getDataButton{
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 101;
+.mapboxgl-ctrl button{
+    display:        none;
 }
 
 .marker{
-    background: white;
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-5px, -5px);
-    z-index: 101;
+    position:       absolute;
+    width:          10px;
+    height:         10px;
+    background:     black;
+    border-radius:  50%;
+    margin-top:     91px;
+    margin-left:    160px;
+    box-shadow:     0 0 1px 1px rgba(0, 0, 0, 0.8);
+    animation:      pulseMarker 2s infinite;
+}
+
+@keyframes pulseMarker {
+    0% {
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.8);
+    }
+    100% {
+        box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+    }
 }
