--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -1,19 +1,18 @@
 .sidebar{
-    height: 100%;
-    width: 350px;
+    height:     100%;
+    width:      350px;
     background: #ffffff;
-    z-index: 40;
-    position: absolute;
-    right: -360px;
+    z-index:    40;
+    position:   absolute;
+    right:      -360px;
     overflow-x: hidden;
 
-    display: grid;
-    grid-template-columns: 10px 50px auto 50px 10px;
-    grid-template-rows: repeat(12, 48px) auto;
+    display:                grid;
+    grid-template-columns:  10px 50px auto 50px 10px;
+    grid-template-rows:     repeat(6, 48px) 68px repeat(5, 48px) 88px repeat(2, 48px) auto;
 
-    filter: drop-shadow(-3px 0 6px rgba(0,0,0,0.2) );
-
-    transition: 0.5s;
+    filter:                 drop-shadow(-3px 0 6px rgba(0,0,0,0.2) );
+    transition:             0.5s;
 }
 
 #open{
@@ -23,30 +22,30 @@
 
 /* Icons */
 #closeIcon{
-    grid-column: 4 / 5;
-    grid-row: 1 / 2;
-    justify-self: end;
-    align-self: center;
-    transition: fill 200ms;
+    grid-column:    4 / 5;
+    grid-row:       1 / 2;
+    justify-self:   end;
+    align-self:     center;
+    transition:     fill 200ms;
 }
 
 .iconLow, .iconHigh, #closeIcon{
-    width: 24px;
-    height: 24px;
+    width:          24px;
+    height:         24px;
 }
 
 .iconLow{
-    grid-column: 2 / 3;
-    grid-row: 6 / 7;
-    align-self: center;
-    justify-self: center;
+    grid-column:    2 / 3;
+    grid-row:       6 / 7;
+    align-self:     center;
+    justify-self:   center;
 }
 
 .iconHigh{
-    grid-column: 4 / 5;
-    grid-row: 6 / 7;
-    align-self: center;
-    justify-self: center;
+    grid-column:    4 / 5;
+    grid-row:       6 / 7;
+    align-self:     center;
+    justify-self:   center;
 }
 
 #closeIcon:hover{
@@ -56,37 +55,57 @@
 
 /* Setup Container */
 .sidebar h4 {
-    grid-column: 2 / 5;
-    grid-row: 2 / 3;
+    grid-column:    2 / 5;
+    grid-row:       2 / 3;
 }
 
 .sidebar h5{
-    grid-column: 2 / 5;
-    align-self: end;
+    grid-column:    2 / 5;
+    align-self:     end;
 }
 
 .switchContainer{
-    height: 30px;
-    width: 100%;
-    align-self: center;
-    grid-column: 2 / 5;
-    grid-row: 4 / 5;
+    height:         30px;
+    width:          100%;
+    align-self:     center;
+    grid-column:    2 / 5;
+    grid-row:       4 / 5;
 }
 
 .sliderContainer{
-    width: 100%;
-    position: relative;
-    grid-column: 3 / 4;
-    align-self: center;
+    width:          100%;
+    position:       relative;
+    grid-column:    3 / 4;
+    align-self:     center;
 }
 
-.inputContainer{
-    position: relative;
-    width: 100%;
-    height: 40px;
-    margin: 0;
-    grid-column: 2 / 5;
-    align-self: center;
+
+.locationMap{
+    width:          330px;
+    height:         192px;
+
+    grid-column:    2 / 5;
+    grid-row:       9 / 13;
+}
+
+.hideMap{
+    width:          350px;
+    height:         210px;
+    grid-column:    1 / 6;
+    grid-row:       9 / 13;
+
+    background:     #D6D6D6;
+    opacity:        0.5;
+    z-index:        100;
+
+}
+
+.buttonSetLocation{
+    grid-column:    3 / 5;
+    grid-row:       12 / 13;
+    align-self:     end;
+    justify-self:   end;
+    z-index:        90;
 }
 
 
@@ -120,15 +139,15 @@
 }
 
 #catVisuals{
-    grid-row: 10 / 11;
+    grid-row: 13 / 14;
 }
 
 #partySwitch{
-    grid-row: 11 / 12;
+    grid-row: 14 / 15;
 }
 
 #prjSwitch{
-    grid-row: 12 /13;
+    grid-row: 15 /16;
 }
 
 
