--- a/src/css/ToggleSwitch.css
+++ b/src/css/ToggleSwitch.css
@@ -2,63 +2,67 @@
 /* Changed */
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 20px;
-    float: left;
+    position:   relative;
+    display:    inline-block;
+    width:      50px;
+    height:     20px;
+    float:      left;
     margin-top: 5px;
 }
 
 .switchTitle{
-    display: inline-block;
-    float: left;
-    margin-left: 10px;
+    display:        inline-block;
+    float:          left;
+    margin-left:    10px;
 }
 
 .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
+    opacity:    0;
+    width:      0;
+    height:     0;
+}
+
+.switch:hover{
+    opacity: 0.8;
 }
 
 
 .thumb {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #D6D6D6;
+    position:           absolute;
+    cursor:             pointer;
+    top:                0;
+    left:               0;
+    right:              0;
+    bottom:             0;
+    background-color:   #D6D6D6;
     -webkit-transition: .4s;
-    transition: .4s;
+    transition:         .4s;
 
-    border-radius: 34px;
+    border-radius:      34px;
 }
 
 .thumb:before {
-    position: absolute;
-    content: "";
-    height: 20px;
-    width: 20px;
-    left: 0;
-    bottom: 0;
-    background-color: #000000;
+    position:           absolute;
+    content:            "";
+    height:             20px;
+    width:              20px;
+    left:               0;
+    bottom:             0;
+    background-color:   #000000;
     -webkit-transition: .4s;
-    transition: .4s;
+    transition:         .4s;
 
-    border-radius: 50%;
+    border-radius:      50%;
 }
 
 input:checked + .thumb {
-    background-color: #E41A43;
+    background-color:   #E41A43;
 }
 
 
 input:checked + .thumb:before {
-    -webkit-transform: translateX(30px);
-    -ms-transform: translateX(30px);
-    transform: translateX(30px);
+    -webkit-transform:  translateX(30px);
+    -ms-transform:      translateX(30px);
+    transform:          translateX(30px);
 }
 
