--- a/src/css/module/Settings.css
+++ b/src/css/module/Settings.css
@@ -1,10 +1,10 @@
 .sidebar{
     height:     100%;
-    width:      350px;
+    width:      0;
     background: #ffffff;
     z-index:    40;
     position:   absolute;
-    right:      -360px;
+    right:      0;
     overflow-x: hidden;
 
     display:                grid;
@@ -16,7 +16,7 @@
 }
 
 #open{
-    right: 0;
+    width: 350px;
 }
 
 
@@ -86,6 +86,12 @@
 
     grid-column:    2 / 5;
     grid-row:       9 / 13;
+
+    border:         2px solid #E41A43;
+}
+
+#locationSet{
+    border:         2px solid black;
 }
 
 .hideMap{
@@ -94,8 +100,6 @@
     grid-column:    1 / 6;
     grid-row:       9 / 13;
 
-    background:     #D6D6D6;
-    opacity:        0.5;
     z-index:        100;
 
 }
