--- a/src/css/app.css
+++ b/src/css/app.css
@@ -8,12 +8,11 @@ html, body{
     height:     100%;
 }
 
-body{
-    background-color:   #000000;
+#root{
+    background-color:   #ffffff;
     font-family:        'Sen', Verdana, sans-serif;
     padding:            0;
     color:              #000000;
-    overflow:           hidden;
 }
 
 h4, h5, h6, p{
@@ -37,8 +36,10 @@ p{
 }
 
 .rootContainer{
-    width:  100%;
-    height: 100%;
+    background: #000000;
+    width:      100%;
+    height:     100%;
+    overflow:   hidden;
 }
 
 #root{
@@ -52,7 +53,6 @@ p{
 
 #fadeOut *{
     height:     0;
-    display: none;
 }
 
 .visualsRoot{
@@ -69,6 +69,13 @@ p{
     top:        50px;
     left:       300px;
     z-index:    20;
+}
+
+@media (max-width: 600px) {
+
+    h6{
+        font-size: 16px;
+    }
 }
 
 
