--- a/src/css/component/Dialog.css
+++ b/src/css/component/Dialog.css
@@ -38,3 +38,26 @@
     grid-row:       4 / 5;
     justify-self:   end;
 }
+
+@media (max-width: 600px) {
+
+    .dialog{
+        width:  280px;
+        height: 288px;
+        transform: translate(-140px, -144px);
+
+        grid-template-rows:     64px repeat(4, 56px);
+    }
+
+    .dialog p {
+        grid-row: 2 / 4;
+    }
+
+    .dialogSwitch{
+        grid-row: 4 / 5;
+    }
+
+    .dialogButton{
+        grid-row: 5 / 6;
+    }
+}
