--- a/src/css/module/BottomBar.css
+++ b/src/css/module/BottomBar.css
@@ -72,5 +72,8 @@
     grid-column:    1 / 4;
     grid-row:       1 / 3;
     z-index:        1;
+}
 
+#hideComponents *{
+    display:        none;
 }
