--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,6 +3,10 @@
     padding:    0;
 }
 
+*, *::before, *::after{
+    box-sizing: border-box;
+}
+
 html, body{
     width:      100%;
     height:     100%;
