--- a/src/css/module/Settings.css
+++ b/src/css/module/Settings.css
@@ -170,7 +170,7 @@
 
     .sidebar{
         grid-template-columns:  auto 50px 230px 50px auto;
-        grid-template-rows:     repeat(6, 40px) 50px repeat(5, 40px) 100px repeat(4, 40px) auto;
+        grid-template-rows:     repeat(6, 40px) 50px repeat(4, 40px) 70px 80px repeat(4, 40px) auto;
     }
 
     .sidebar h4{
