--- a/public/legal/legal.css
+++ b/public/legal/legal.css
@@ -1,17 +1,46 @@
-#overflow{
-
-}
-
-.bodyData{
-    overflow-y: scroll;
+html, body{
     width:      100%;
     height:     fit-content;
 }
 
-.bodyImprint{
-    width: 100%;
-    height: 100%
+*{
+    margin:     0;
+    padding:    0;
 }
+
+body{
+    background-color:   #ffffff;
+    font-family:        'Sen', Verdana, sans-serif;
+    padding:            0;
+    color:              #000000;
+    overflow-y:         scroll;
+    overflow-x:         hidden;
+}
+
+h1{
+    font-size:      40px;
+}
+
+h4, h5, h6, p{
+    font-weight:    normal;
+}
+
+h4{
+    font-size:      37px;
+}
+
+h5{
+    font-size:      26px;
+}
+
+h6{
+    font-size:      22px;
+}
+
+p{
+    font-size:      16px;
+}
+
 
 .dataContainer{
     width:      480px;
@@ -30,26 +59,6 @@
     top:        80px;
     left:       50%;
     transform:  translate(-240px, 0);
-}
-
-.logoLegal{
-    background: #000000;
-    height:     40px;
-    width:      100%;
-    position:   absolute;
-}
-
-.logoLegal svg{
-    position:   absolute;
-    left:       5px;
-    top:        3px;
-    width:      180px;
-    height:     40px;
-    fill:       #ffffff;
-}
-
-.logoLegal svg:hover{
-    fill:       #E41A43;
 }
 
 h1{
