--- a/src/css/component/ToggleSwitch.css
+++ b/src/css/component/ToggleSwitch.css
@@ -1,5 +1,4 @@
-/* https://www.w3schools.com/howto/howto_css_switch.asp */
-/* Changed */
+/* Inspired by https://www.w3schools.com/howto/howto_css_switch.asp */
 
 .switch {
     position:   relative;
